--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -10,7 +10,7 @@
   display: flex;
   width: 50px;
   height: 50px;
-  color: white;
+  color: black;
   background-color: aqua;
   border: 1px solid black;
   justify-content: center;
