--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -6,3 +6,10 @@
   <% end %>
 </div>
 
+<h3>What is the longest word you can find?</h3>
+<form action="/score" method="POST">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= hidden_field_tag :letters, @letters %>
+  <input type="text" name="word" placeholder="Your guess?">
+  <input type="submit" value="Play">
+</form>
