--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -10,6 +10,7 @@
 <form action="/score" method="POST">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag :letters, @letters %>
+  <%= hidden_field_tag :score, @total_score %>
   <input type="text" name="word" placeholder="Your guess?">
   <input type="submit" value="Play">
 </form>
