--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,7 +1,15 @@
 <h1>Results</h1>
 
 <div>
-  <p><%= @result %> </p>
+    <% if @included %>
+      <% if @english_word %>
+        <p>"Congratulations! <strong><%= @guess %></strong> is a valid English word."</p>
+      <% else %>
+        <p>"Sorry but <strong><%= @guess %></strong> does not seem to be a valid English word..."</p>
+      <% end %>
+    <% else %>
+      <p>"Sorry but <strong><%= @guess %></strong> can't be built out of <%= @letters %>"</p>
+    <% end %>
 </div>
 
 <%= link_to 'Play again', 'new'  %>
